# first-server

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
braid/: BraidServer.cc
braid/src/: CMakeLists.txt
braid/src/memory/: CMakeLists.txt
braid/src/memory/include/braid/memory/: MemoryChunk.h  ObjectPool.h  PooledObject.h  ThreadLocalCache.h
braid/src/net/: CMakeLists.txt
braid/src/net/include/braid/net/: IOCompletion.h  IOOperation.h  IOOperationAccept.h  IOOperationNop.h  IOOperationRecv.h  IOOperationSend.h  IORequestQueue.h  IOUringObject.h
braid/src/net/include/net/: IOOperation.h  IOOperationAccept.h  IOOperationNop.h  IOOperationRecv.h  IOOperationSend.h  IORequestQueue.h  IOUringObject.h
braid/src/net/src/: IOCompletion.cc  IOOperationAccept.cc  IOOperationNop.cc  IOOperationRecv.cc  IOOperationSend.cc  IORequestQueue.cc
braid/src/service/: CMakeLists.txt
braid/src/service/include/braid/message/: MessageDispatcher.h  MessageHeader.h  SendBuffer.h
braid/src/service/include/braid/net/: IOCompletion.h  IOOperationAccept.h  IOOperationSendBuffer.h
braid/src/service/include/braid/service/: Actor.h  MessageHeader.h  Service.h  ServiceBuilder.h  ServiceObject.h  ServiceSession.h
braid/src/service/include/braid/thread/: IOURingThread.h  Thread.h  WorkerThread.h
braid/src/service/include/service/: MessageHeader.h  Service.h  ServiceBuilder.h  ServiceObject.h
braid/src/service/include/thread/: WorkerThread.h
braid/src/service/src/message/: MessageDispatcher.cc
braid/src/service/src/net/: IOCompletion.cc  IOOperationSendBuffer.cc  IORequestQueue.cc
braid/src/service/src/service/: Actor.cc  Service.cc  ServiceSession.cc
braid/src/service/src/thread/: IOURingThread.cc  Thread.cc  WorkerThread.cc
braid/src/task/: CMakeLists.txt
braid/src/task/include/braid/task/: RefCountable.h  Task.h  TaskDistributor.h  TaskSerializer.h
braid/src/task/include/task/: RefCountable.h  Task.h  TaskDistributor.h  TaskSerializer.h
braid/src/task/src/task/: TaskDistributor.cc  TaskSerializer.cc
braid/src/util/: CMakeLists.txt
braid/src/util/include/braid/util/: LogHandler.h  Macro.h  Utility.h
braid/src/util/include/util/: BraidPCH.h
braid/src/util/src/: LogHandler.cc
first-server/: CMakeLists.txt  FirstServer.cc  FirstServerPCH.h
first-server/Network/IO/: IOCompletion.cc  IOCompletion.h  IORequestQueue.cc  IOUringObject.h
first-server/Network/IO/Operation/: IOOperationAccept.cc  IOOperationAccept.h
first-server/Thread/: Thread.cc  Thread.h
first-server/Thread/IO/: AcceptorThread.h  IOThreadPool.cc  IOThreadPool.h  IOURingThread.cc  IOURingThread.h  WorkerThread.h
first-server/Thread/Network/: AcceptorThread.cc  AcceptorThread.h  IORingThread.cc  IORingThread.h  WorkerThread.cc  WorkerThread.h
first-server/Util/: Typedefs.h
first-server/src/: CMakeLists.txt
first-server/src/net/: CMakeLists.txt
first-server/src/net/include/net/: IOCompletion.h  IOOperation.h  IOOperationAccept.h  IOOperationNop.h  IOOperationRecv.h  IOOperationSend.h  IORequestQueue.h  IOUringObject.h
first-server/src/net/src/: IOCompletion.cc  IOOperationAccept.cc  IOOperationNop.cc  IOOperationRecv.cc  IOOperationSend.cc  IORequestQueue.cc
first-server/src/service/: CMakeLists.txt
first-server/src/service/include/service/: Service.h
first-server/src/service/include/task/: Task.h  TaskSerializer.h
first-server/src/service/include/thread/: AcceptorThread.h  IOThreadPool.h
first-server/src/service/src/service/: Service.cc  ServiceObject.cc
first-server/src/service/src/thread/: AcceptorThread.cc  IOThreadPool.cc  IOURingThread.cc  WorkerThread.cc
first-server/src/task/: CMakeLists.txt
first-server/src/task/include/task/: Task.h  TaskDistributor.h  TaskSerializer.h
first-server/src/task/src/task/: TaskDistributor.cc  TaskSerializer.cc
first-server/src/thread/: CMakeLists.txt
first-server/src/thread/include/thread/: IOURingThread.h  Thread.h
first-server/src/util/include/util/: FirstServerPCH.h  Typedefs.h
sample-server/: CMakeLists.txt  SampleServer.cc
test-client/: CMakeLists.txt  TestClient.cc
